8263579: ZGC: Concurrent mark hangs with debug loglevel

Reviewed-by: pliden, ayang, eosterlund